Correction du menu burger dans main.css, ajout du z-index pour enlever le probleme d'affichage

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,6 +2,7 @@
     max-width: 80px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
 }
 
 h1 {
@@ -21,6 +22,10 @@ form {
     width: 85%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.connexion--login-container {
+    margin-bottom: 50px;
 }
 
 .button {
